forum-gitops/php-app/forum-yaml/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  namespace: forum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: devopszone25/forum-pipe-app:latest
          ports:
            - containerPort: 9000
          command: ["/usr/local/bin/docker-entrypoint.sh"]
          args: ["php-fpm"]
