forum-gitops/php-app/forum-yaml/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: forum
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
