forum-gitops/php-app/forum-yaml/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: laravel-network-policy
  namespace: forum
spec:
  podSelector:
    matchLabels:
      app: laravel
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 9000
  policyTypes:
    - Ingress
